2024-08-26T12:40:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10559930214 # 491
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-26
* notice: last 14d: unq all: 18 60
* notice: prev accum: outdated-unq outdated-all / unq all: 759 4256 / 777 4301
* notice: next accum: outdated-unq outdated-all / unq all: 759 4256 / 778 4317
* notice: prev exec diff / last date diff / accum: unq all: +1 +16 -0 -0 / +1 +16 -0 -0 / 1 16
* notice: removed / changed dates: [] / [2024-08-26]

2024-08-26T01:39:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10552031162 # 490
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-26
* notice: last 14d: unq all: 17 44
* notice: prev accum: outdated-unq outdated-all / unq all: 759 4256 / 776 4295
* notice: next accum: outdated-unq outdated-all / unq all: 759 4256 / 777 4301
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -1 -1 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [] / [2024-08-12 2024-08-25]

2024-08-25T01:44:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10543163065 # 488
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-25
* notice: last 14d: unq all: 17 39
* notice: prev accum: outdated-unq outdated-all / unq all: 758 4250 / 776 4295
* notice: next accum: outdated-unq outdated-all / unq all: 759 4256 / 776 4295
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-10] / []

2024-08-24T01:35:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10534642318 # 486