@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-26T12:40:39Z",
-  "count" : 16,
-  "count_minmax" : [ 16, 16 ],
-  "count_decinc" : [ -0, +16 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2024-08-27T01:39:27Z",
+  "count" : 18,
+  "count_minmax" : [ 16, 18 ],
+  "count_decinc" : [ -0, +18 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
