@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-26T12:40:39Z",
-  "count_outdated" : 4256,
-  "uniques_outdated" : 759,
-  "count" : 4317,
-  "uniques" : 778,
+  "timestamp" : "2024-08-27T01:39:27Z",
+  "count_outdated" : 4261,
+  "uniques_outdated" : 761,
+  "count" : 4319,
+  "uniques" : 779,
   "views" : [
-    {
-      "timestamp": "2024-08-12T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 1, 5 ],
-      "count_decinc": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2024-08-15T00:00:00Z",
       "count": 9,
@@ -70,12 +61,12 @@
     },
     {
       "timestamp": "2024-08-26T00:00:00Z",
-      "count": 16,
-      "count_minmax": [ 16, 16 ],
-      "count_decinc": [ 0, 16 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 18,
+      "count_minmax": [ 16, 18 ],
+      "count_decinc": [ 0, 18 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
