@@ -1,12 +1,7 @@
 {
-  "count": 60,
+  "count": 58,
   "uniques": 18,
   "views": [
-    {
-      "timestamp": "2024-08-12T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-08-15T00:00:00Z",
       "count": 9,
@@ -39,8 +34,8 @@
     },
     {
       "timestamp": "2024-08-26T00:00:00Z",
-      "count": 16,
-      "uniques": 1
+      "count": 18,
+      "uniques": 2
     }
   ]
 }
